# mapgeneration-svn

branches/mapgenerator-with-optimiser/: Makefile.in  README  aclocal.m4  configure.ac  mapgenerator.conf.release
branches/mapgenerator-with-optimiser/src/: defaultconfiguration.h  edge.cpp  edge.h  executionmanager.cpp  executionmanager.h  filteredtrace.cpp  filteredtrace.h  filteredtracereceiver.h  gpspoint.cpp  gpspoint.h  main.cpp  node.cpp  node.h  stringedtracereceiver.h  tile.cpp  tile.h  tilecache.cpp  tilecache.h  tilemanager.cpp  tilemanager.h  traceconnection.cpp  traceconnection.h  tracefilter.cpp  tracefilter.h  tracelogwriter.cpp  traceprocessor.cpp  traceprocessor.h  traceprocessor_configuration.cpp  traceprocessor_pathentry.cpp  traceprocessor_protocol.cpp  traceprocessor_virtualnode.cpp  traceserver.cpp  traceserver.h
branches/mapgenerator-with-optimiser/src/dbconnection/: dbconnection.h  filedbconnection.cpp  filedbconnection.h  odbcdbconnection.cpp  odbcdbconnection.h
branches/mapgenerator-with-optimiser/src/gpstrans/: gpsdatum.h
branches/mapgenerator-with-optimiser/src/gui/: dialoglogic.h  eventmacros.h  extendedgenericvalidator.h  openconnectiondialoglogic.cpp
branches/mapgenerator-with-optimiser/src/optimisation/: asymmetricadaptiveevolutionaryalgorithm.h  asymmetricadaptiveindividual.h  evolutionaryalgorithm.cpp  evolutionaryalgorithm.h  evolutionaryalgorithmfactory.cpp  evolutionaryalgorithmfactory.h  extractor.cpp  functor.h  individual.cpp  individual.h  main.cpp  mapgenerationevolutionaryalgorithm.cpp  mapgenerationevolutionaryalgorithm.h  mapgenerationindividual.cpp  mapgenerationindividual.h  randomnumberfactory.cpp  randomnumberfactory.h  randomnumbergenerators.cpp  randomnumbergenerators.h
branches/mapgenerator-with-optimiser/src/serializers/: serialize_filteredtrace.cpp
branches/mapgenerator-with-optimiser/src/util/: cache.h  configuration.cpp  controlledthread.cpp  controlledthread.h  direction.cpp  direction.h  fixedsizequeue.h  fixpointvector.h  geocoordinate.cpp  geocoordinate.h  mlog.cpp  mlog.h  serializer.h
branches/mapgenerator-with-optimiser/tests/: test_dbconnection.cpp  test_gpspoint.cpp  test_protocol.cpp  test_rangereporting.cpp  test_serializer.cpp  test_tilecache.cpp
tags/mapgenerator-0.2.0/: INSTALL  Makefile.in  configure.ac
tags/mapgenerator-0.2.0/src/: defaultconfiguration.h  filteredtrace.cpp  filteredtrace.h  gpspoint.h  node.h  tilecache.cpp  tilemanager.cpp  tracelogwriter.cpp  traceserver.cpp  traceserver.h
tags/mapgenerator-0.2.0/src/dbconnection/: dbconnection.h  odbcdbconnection.h
tags/mapgenerator-0.2.0/src/gui/: openconnectiondialoglogic.h  preferencesdialoglogic.h
tags/mapgenerator-0.2.0/src/util/: cache.h  configuration.h  constants.h  mlog.cpp  serializer.h
tags/mapgenerator-0.2.0/tests/: test_traceserver.cpp
tags/mapgenerator-0.3.0/: Makefile.in  configure.ac
tags/mapgenerator-0.3.0/src/: defaultconfiguration.h  edge.h  executionmanager.cpp  filteredtrace.h  geocoordinate.cpp  main.cpp  node.cpp  tile.cpp  tile.h  tilecache.cpp  tilemanager.cpp  tilemanager.h  traceconnection.cpp  tracelog.cpp  traceprocessor.cpp  traceprocessor.h  traceserver.cpp
tags/mapgenerator-0.3.0/src/dbconnection/: filedbconnection.cpp  filedbconnection.h
tags/mapgenerator-0.3.0/src/gpstrans/: README  (+1 more)
tags/mapgenerator-0.3.0/tests/: test_gpspoint.cpp  test_rangereporting.cpp  test_tilecache.cpp
trunk/mapgenerator/: CHANGELOG  INSTALL  Makefile.in  configure.ac  mapgenerator.conf  mapgenerator.conf.release  mgg.conf  mgg.conf.release
trunk/mapgenerator/doc/: Doxy_html
trunk/mapgenerator/src/: dbconnection.cpp  dbconnection.h  defaultconfiguration.h  edge.cpp  edgecache.cpp  edgecache.h  executionmanager.cpp  executionmanager.h  filteredtrace.cpp  filteredtrace.h  geocoordinate.cpp  geocoordinate.h  gpspoint.cpp  gpspoint.h  main.cpp  node.cpp  node.h  tile.cpp  tile.h  tilecache.cpp  tilecache.h  tilemanager.cpp  tilemanager.h  traceconnection.cpp  traceconnection.h  tracefilter.cpp  tracefilter.h  tracelog.cpp  tracelog.h  tracelogwriter.cpp  tracelogwriter.h  traceprocessor.cpp  traceprocessor.h  traceserver.cpp  traceserver.h
trunk/mapgenerator/src/dbconnection/: filedbconnection.cpp  filedbconnection.h  odbcdbconnection.cpp
trunk/mapgenerator/src/export/: export.cpp  export.h  main.cpp
trunk/mapgenerator/src/gpstrans/: gps.h  gpsmath.h  gpsproj.h
trunk/mapgenerator/src/gui/: dialoglogic.cpp  extendedgenericvalidator.cpp  mainframelogic.cpp  mainframelogic.h  mgg.cpp  mgg.h  module.h  modulemanager.cpp  openconnectiondialoglogic.cpp  preferencesdialoglogic.cpp
trunk/mapgenerator/src/gui/modules/mapmodule/: mapmodule.cpp  mapmodule.h  mappanellogic.cpp  mappanellogic.h
trunk/mapgenerator/src/gui/modules/tracelogmodule/: tracelogmodule.cpp  tracelogmodule.h  tracelogpanellogic.cpp
trunk/mapgenerator/src/gui/util/: gpsdraw.cpp  gpsdraw.h  mapdrawer.cpp  mapdrawer.h  mapgenerationdraw.cpp  mapgenerationdraw.h  mapscrolledwindowlogic.cpp  mapscrolledwindowlogic.h
trunk/mapgenerator/src/gui/xrcs/: mainframe.xrc  mappanel.xrc  testmodule.xrc
trunk/mapgenerator/src/util/: arithmeticoperations.h  cache.h  configuration.cpp  configuration.h  constants.h  controlledthread.h  direction.h  fixedsizequeue.h  fixpointvector.h  geocoordinate.cpp  geocoordinate.h  mlog.cpp  serializer.h
trunk/mapgenerator/src/util/mngconverter/: mngconverter.cpp  mngconverter.h
trunk/mapgenerator/src/util/prtconverter/: prtconverter.h  prtconvertermain.cpp
trunk/mapgenerator/src/util/pubsub/: arithmeticservice.h  asynchronousproxy.h  callpublisher.h  service.h  servicelist.cpp  servicelist.h
trunk/mapgenerator/src/util/rangereporting/: helperfunctions.h  pointnd.h  quadtree.h  rangereportingsystem.h  rectangle.h  segment.h  trapezoid.h
trunk/mapgenerator/tests/: db_benchmark.cpp  test_cache.cpp  test_configuration.cpp  test_dbconnection.cpp  test_filteredtrace.cpp  test_fixpointvector.cpp  test_gpspoint.cpp  test_pubsub.cpp  test_rangereporting.cpp  test_serializer.cpp  test_tilecache.cpp  test_tracefilter.cpp
(+65 files in other folders)
